--- a/kubernetes/apps/database/cloudnative-pg/cluster/externalsecret.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/externalsecret.yaml
@@ -9,7 +9,7 @@ spec:
     name: vault-kv-backend
     kind: SecretStore
   target:
-    name: bootstrap-immich
+    name: bootstrap-sql
     template:
       type: opaque
       data:
