--- a/kubernetes/schmapps/media/immich/app/externalsecret.yaml
+++ b/kubernetes/schmapps/media/immich/app/externalsecret.yaml
@@ -14,13 +14,12 @@ spec:
     template:
       engineVersion: v2
       data:
-        # App
-        DB_DATABASE_NAME: &dbName immich
-        DB_HOSTNAME: &dbHost postgres-rw.database.svc.cluster.local
-        DB_USERNAME: &dbUser "{{ .DB_USERNAME }}"
-        DB_PASSWORD: &dbPass "{{ .DB_PASSWORD }}"
-        JWT_SECRET: "{{ .JWT_SECRET }}"
-        TYPESENSE_API_KEY: "{{ .TYPESENSE_API_KEY }}"
+        DB_DATABASE_NAME: immich
+        DB_HOSTNAME: postgres-rw.database.svc.cluster.local
+        DB_USERNAME: "{{ .IMMICH_POSTGRES_USER }}"
+        DB_PASSWORD: "{{ .IMMICH_POSTGRES_PASSWORD }}"
+        JWT_SECRET: "{{ .IMMICH_JWT_SECRET }}"
+        TYPESENSE_API_KEY: "{{ .IMMICH_TYPESENSE_API_KEY }}"
   dataFrom:
     - extract:
         key: /media/immich
