--- a/kubernetes/apps/media/immich/app/kustomization.yaml
+++ b/kubernetes/apps/media/immich/app/kustomization.yaml
@@ -7,8 +7,8 @@ resources:
   - ./externalsecret.yaml
   - ./configmap.yaml
   - ./nfs-pvc.yaml
-  # - ./typesense
-  # - ./server
-  # - ./microservices
-  # - ./machine-learning
-  # - ./web
+  - ./typesense
+  - ./server
+  - ./microservices
+  - ./machine-learning
+  - ./web
