--- a/kubernetes/apps/media/immich/app/kustomization.yaml
+++ b/kubernetes/apps/media/immich/app/kustomization.yaml
@@ -9,6 +9,6 @@ resources:
   - ./nfs-pvc.yaml
   - ./typesense
   # - ./server
-  # - ./microservices
+  - ./microservices
   # - ./machine-learning
   - ./web
