--- a/kubernetes/apps/media/immich/app/kustomization.yaml
+++ b/kubernetes/apps/media/immich/app/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - ./configmap.yaml
   - ./nfs-pvc.yaml
   - ./typesense
-  # - ./server
+  - ./server
   - ./microservices
-  # - ./machine-learning
+  - ./machine-learning
   - ./web
