--- a/kubernetes/apps/media/immich/app/server/helmrelease.yaml
+++ b/kubernetes/apps/media/immich/app/server/helmrelease.yaml
@@ -35,8 +35,8 @@ spec:
       replicas: 2
       strategy: RollingUpdate
       annotations:
-        configmap.reloader.stakater.com/reload: *configMap
-        secret.reloader.stakater.com/reload: *secret
+        configmap.reloader.stakater.com/reload: immich-configmap
+        secret.reloader.stakater.com/reload: immich-secret
     image:
       repository: ghcr.io/immich-app/immich-server
       tag: v1.67.2
