--- a/kubernetes/apps/media/immich/app/web/helmrelease.yaml
+++ b/kubernetes/apps/media/immich/app/web/helmrelease.yaml
@@ -26,8 +26,8 @@ spec:
   uninstall:
     keepHistory: false
   dependsOn:
-    # - name: immich-server
-    #   namespace: media
+    - name: immich-server
+      namespace: media
     - name: redis
       namespace: database
   values:
