--- a/kubernetes/apps/media/immich/app/server/helmrelease.yaml
+++ b/kubernetes/apps/media/immich/app/server/helmrelease.yaml
@@ -35,13 +35,17 @@ spec:
       replicas: 2
       strategy: RollingUpdate
       annotations:
-        configmap.reloader.stakater.com/reload: immich-configmap
-        secret.reloader.stakater.com/reload: immich-secret
+        configmap.reloader.stakater.com/reload: &configMap immich-configmap
+        secret.reloader.stakater.com/reload: &secret immich-secret
     image:
       repository: ghcr.io/immich-app/immich-server
       tag: v1.67.2
     args: ["start-server.sh"]
-    envFrom: *envFrom
+    envFrom:
+      - configMapRef:
+          name: *configMap
+      - secretRef:
+          name: *secret
     service:
       main:
         ports:
