relocate cloudnative-pg db instance

--- a/.env.example
+++ b/.env.example
@@ -27,22 +27,15 @@ HASS_POSTGRES_USER="xxxxxxxx"
 HASS_POSTGRES_PASSWORD="xxxxxxxx"
 
 # immich
-IMMICH_POSTGRES_USER="xxxxxxxx"
+IMMICH_POSTGRES_USER="immich"
 IMMICH_POSTGRES_PASSWORD="xxxxxxxx"
 IMMICH_JWT_SECRET="xxxxxxxxx"
 IMMICH_TYPESENSE_API_KEY="xxxxxxxx"
+IMMICH_POSTGRES_SUPER_USER="xxxxxxxx"
+IMMICH_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
 
 # nfs exports
 NFS_SERVER_IP="192.168.0.200"
 
 # slack
 SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
-
-# cloudnative-pg
-POSTGRES_SUPER_USER="xxxxxxxx"
-POSTGRES_SUPER_PASS="xxxxxxxx"
-POSTGRES__LB_IP="192.168.0.101"
-POSTGRES_HASS_USER="xxxxxxxx"
-POSTGRES_HASS_PASS="xxxxxxxx"
-POSTGRES_IMMICH_USER="xxxxxxxx"
-POSTGRES_IMMICH_PASS="xxxxxxxx"
