--- a/kubernetes/apps/media/immich/database/cluster.yaml
+++ b/kubernetes/apps/media/immich/database/cluster.yaml
@@ -2,8 +2,8 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
-  name: postgres
-  namespace: database
+  name: immich
+  namespace: media
   annotations:
     kyverno.io/ignore: "true"
 spec:
@@ -17,15 +17,13 @@ spec:
     initdb:
       database: immich
       owner: immich
-      postInitApplicationSQLRefs:
-        secretRefs:
-        - name: bootstrap-sql
-          key: immich.sql
+      secret:
+        name: immich-database-user
   storage:
-    size: 10Gi
+    size: 5Gi
     storageClass: local-path
   superuserSecret:
-    name: cloudnative-pg-secret
+    name: immich-database-superuser
   postgresql:
     parameters:
       max_connections: "600"
