--- a/kubernetes/apps/media/immich/database/kustomization.yaml
+++ b/kubernetes/apps/media/immich/database/kustomization.yaml
@@ -2,9 +2,7 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: database
+namespace: media
 resources:
   - ./externalsecret.yaml
   - ./cluster.yaml
-  - ./prometheusrule.yaml
-  - ./service.yaml
