--- a/kubernetes/apps/media/immich/app/web/httproute.yaml
+++ b/kubernetes/apps/media/immich/app/web/httproute.yaml
@@ -11,17 +11,20 @@ spec:
   hostnames:
     - "immich.${DOMAIN}"
   rules:
-  - matches:
-    - path:
-        type: PathPrefix
-        value: /api
-    backendRefs:
-    - name: immich-server
-      port: 3001
-  - matches:
-    - path:
-        type: PathPrefix
-        value: /
-    backendRefs:
-    - name: immich-web
-      port: 3000
+    - matches:
+        - path:
+            type: PathPrefix
+            value: /api
+      backendRefs:
+        - group: ''
+          kind: Service
+          name: immich-server
+          port: 3001
+          weight: 1
+    - backendRefs:
+        - group: ''
+          kind: Service
+          name: immich-web
+          port: 3000
+          weight: 1
+
