--- a/kubernetes/apps/media/immich/app/proxy/httproute.yaml
+++ b/kubernetes/apps/media/immich/app/proxy/httproute.yaml
@@ -11,20 +11,9 @@ spec:
   hostnames:
     - "immich.${DOMAIN}"
   rules:
-    - matches:
-        - path:
-            type: PathPrefix
-            value: /api
-      backendRefs:
-        - group: ''
-          kind: Service
-          name: immich-server
-          port: 3001
-          weight: 1
     - backendRefs:
         - group: ''
           kind: Service
-          name: immich-web
-          port: 3000
+          name: immich-proxy
+          port: 8080
           weight: 1
-
