--- a/kubernetes/apps/home-automation/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/frigate/app/helmrelease.yaml
@@ -93,15 +93,14 @@ spec:
         medium: Memory
         sizeLimit: 4Gi
         mountPath: /dev/shm
-      usb:
-        enabled: true
-        type: hostPath
-        hostPath: /dev/bus/usb
-        hostPathType: Directory
-        mountPath: /dev/bus/usb
+      # usb:
+      #   enabled: true
+      #   type: hostPath
+      #   hostPath: /dev/bus/usb
+      #   hostPathType: Directory
+      #   mountPath: /dev/bus/usb
     nodeSelector:
-      node-role.kubernetes.io/worker: "true"
-      google.feature.node.kubernetes.io/coral: "true"
+      #google.feature.node.kubernetes.io/coral: "true"
     resources:
       requests:
         cpu: 10m
