--- a/kubernetes/apps/home-automation/kustomization.yaml
+++ b/kubernetes/apps/home-automation/kustomization.yaml
@@ -7,6 +7,6 @@ resources:
   - ./namespace.yaml
   - ./externalsecret.yaml
   # Flux-Kustomizations
-  # - ./frigate/ks.yaml
+  - ./frigate/ks.yaml
   # - ./home-assistant/ks.yaml
   # - ./zwave-js-ui/ks.yaml
