add camera secrets

--- a/kubernetes/apps/home-automation/frigate/app/externalsecret.yaml
+++ b/kubernetes/apps/home-automation/frigate/app/externalsecret.yaml
@@ -19,6 +19,24 @@ spec:
         # EMQX
         FRIGATE_MQTT_USERNAME: "{{ .user_1_username }}"
         FRIGATE_MQTT_PASSWORD: "{{ .user_1_password }}"
+        # Cameras
+        FRIGATE_DVR_URL: "{{ .DVR_URL }}"
+        FRIGATE_CAM1_ID: "{{ .CAM1_ID }}"
+        FRIGATE_CAM1_NAME: "{{ .CAM1_NAME }}"
+        FRIGATE_CAM2_ID: "{{ .CAM2_ID }}"
+        FRIGATE_CAM2_NAME: "{{ .CAM_NAME }}"
+        FRIGATE_CAM3_ID: "{{ .CAM3_ID }}"
+        FRIGATE_CAM3_NAME: "{{ .CAM3_NAME }}"
+        FRIGATE_CAM4_ID: "{{ .CAM4_ID }}"
+        FRIGATE_CAM4_NAME: "{{ .CAM4_NAME }}"
+        FRIGATE_CAM5_ID: "{{ .CAM5_ID }}"
+        FRIGATE_CAM5_NAME: "{{ .CAM5_NAME }}"
+        FRIGATE_CAM6_ID: "{{ .CAM6_ID }}"
+        FRIGATE_CAM6_NAME: "{{ .CAM6_NAME }}"
+        FRIGATE_CAM7_ID: "{{ .CAM7_ID }}"
+        FRIGATE_CAM7_NAME: "{{ .CAM7_NAME }}"
+        FRIGATE_CAM8_ID: "{{ .CAM8_ID }}"
+        FRIGATE_CAM8_NAME: "{{ .CAM8_NAME }}"
   dataFrom:
     - extract:
         key: /home-automation/frigate
