--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,12 @@ EMQX_USER1_NAME="xxxxxxxx"
 EMQX_USER1_PASSWORD="xxxxxxxx"
 EMQX_LB_IP="192.168.0.102"
 
+# frigate
+FRIGATE_PLUS_API_KEY="xxxxxxxx"
+FRIGATE_DVR_URL="192.168.0.1:7441"
+FRIGATE_CAM1_NAME="some_camera"
+FRIGATE_CAM1_ID="xxxxxxxx"
+
 # home-assistant
 HASS_POSTGRES_USER="xxxxxxxx"
 HASS_POSTGRES_PASSWORD="xxxxxxxx"
