--- a/kubernetes/apps/home-automation/frigate/app/externalsecret.yaml
+++ b/kubernetes/apps/home-automation/frigate/app/externalsecret.yaml
@@ -14,29 +14,388 @@ spec:
     template:
       engineVersion: v2
       data:
-        # App
-        PLUS_API_KEY: "{{ .PLUS_API_KEY }}"
-        # EMQX
-        FRIGATE_MQTT_USERNAME: "{{ .user_1_username }}"
-        FRIGATE_MQTT_PASSWORD: "{{ .user_1_password }}"
-        # Cameras
-        FRIGATE_DVR_URL: "{{ .DVR_URL }}"
-        FRIGATE_CAM1_ID: "{{ .CAM1_ID }}"
-        FRIGATE_CAM1_NAME: "{{ .CAM1_NAME }}"
-        FRIGATE_CAM2_ID: "{{ .CAM2_ID }}"
-        FRIGATE_CAM2_NAME: "{{ .CAM_NAME }}"
-        FRIGATE_CAM3_ID: "{{ .CAM3_ID }}"
-        FRIGATE_CAM3_NAME: "{{ .CAM3_NAME }}"
-        FRIGATE_CAM4_ID: "{{ .CAM4_ID }}"
-        FRIGATE_CAM4_NAME: "{{ .CAM4_NAME }}"
-        FRIGATE_CAM5_ID: "{{ .CAM5_ID }}"
-        FRIGATE_CAM5_NAME: "{{ .CAM5_NAME }}"
-        FRIGATE_CAM6_ID: "{{ .CAM6_ID }}"
-        FRIGATE_CAM6_NAME: "{{ .CAM6_NAME }}"
-        FRIGATE_CAM7_ID: "{{ .CAM7_ID }}"
-        FRIGATE_CAM7_NAME: "{{ .CAM7_NAME }}"
-        FRIGATE_CAM8_ID: "{{ .CAM8_ID }}"
-        FRIGATE_CAM8_NAME: "{{ .CAM8_NAME }}"
+        PLUS_API_KEY: "{{ .PLUS_API_KEY }}}"
+  dataFrom:
+    - extract:
+        key: /home-automation/frigate
+---
+apiVersion: external-secrets.io/v1alpha1
+kind: ExternalSecret
+metadata:
+  name: frigate-config
+spec:
+  refreshInterval: "30m"
+  secretStoreRef:
+    name: vault-kv-backend
+    kind: SecretStore
+  target:
+    name: frigate-config
+    template:
+      type: opaque
+      data:
+        config.yml: |
+          ---
+          logger:
+            default: info
+            # logs:
+            #   frigate.record: debug
+
+          mqtt:
+            host: emqx.database.svc.cluster.local
+            topic_prefix: frigate
+            user: "{{ .user_1_username }}"
+            password: "{{ .user_1_password }}"
+
+          database:
+            path: /data/frigate.db
+
+          # detectors:
+          #   coral:
+          #     type: edgetpu
+          #     device: usb
+
+          objects:
+            track:
+              - person
+            filters:
+              person:
+                min_area: 2500
+                max_area: 100000
+                threshold: 0.7
+
+          # ffmpeg:
+          #   hwaccel_args: preset-vaapi
+
+          go2rtc:
+            streams:
+              # doorbell_front
+              "{{ .CAM1_NAME }}":
+                - "rtspx:// {{ .DVR_URL }/ {{ .CAM1_ID }}"
+              # doorbell_patio
+              "{{ .CAM2_NAME }}":
+                - "rtspx:// {{ .DVR_URL }/ {{ .CAM2_ID }}"
+              # basement_door
+              "{{ .CAM3_NAME }}":
+                - "rtspx:// {{ .DVR_URL }/ {{ .CAM3_ID }}"
+              # rear
+              "{{ .CAM4_NAME }}":
+                - "rtspx:// {{ .DVR_URL }/ {{ .CAM4_ID }}"
+              # kitchen
+              "{{ .CAM5_NAME }}":
+                - "rtspx:// {{ .DVR_URL }/ {{ .CAM5_ID }}"
+              # upstairs
+              "{{ .CAM6_NAME }}":
+                - "rtspx:// {{ .DVR_URL }/ {{ .CAM6_ID }}"
+              # driveway
+              "{{ .CAM7_NAME }}":
+                - "rtspx:// {{ .DVR_URL }/ {{ .CAM7_ID }}"
+              # basement
+              "{{ .CAM8_NAME }}":
+                - "rtspx:// {{ .DVR_URL }/ {{ .CAM8_ID }}"
+
+          cameras:
+            # doorbell_front
+            "{{ .CAM1_NAME }}":
+              ffmpeg:
+                inputs:
+                  - path: "rtsp://127.0.0.1:8554/{{ .CAM1_NAME }}"
+                    input_args: preset-rtsp-restream
+                    roles:
+                      - detect
+                  - path: "rtsp://127.0.0.1:8554/{{ .CAM1_NAME }}"
+                    input_args: preset-rtsp-restream
+                    roles:
+                      - record
+              detect:
+                width: 960
+                height: 720
+                fps: 10
+              record:
+                enabled: False
+              snapshots:
+                enabled: True
+                timestamp: False
+                retain:
+                  default: 14
+              objects:
+                filters:
+                  person:
+                    mask:
+                      - 712,447,711,388,960,410,960,167,902,156,699,238,248,245,0,274,0,425
+                track:
+                  - person
+              motion:
+                mask:
+                  - 712,447,711,388,960,410,960,167,902,156,699,238,248,245,0,274,0,425
+            # doorbell_patio
+            "{{ .CAM2_NAME }}":
+              ffmpeg:
+                inputs:
+                  - path: "rtsp://127.0.0.1:8554/{{ .CAM2_NAME }}"
+                    input_args: preset-rtsp-restream
+                    roles:
+                      - detect
+                  - path: "rtsp://127.0.0.1:8554/{{ .CAM2_NAME }}"
+                    input_args: preset-rtsp-restream
+                    roles:
+                      - record
+              detect:
+                width: 960
+                height: 720
+                fps: 10
+              record:
+                enabled: False
+              snapshots:
+                enabled: True
+                timestamp: False
+                retain:
+                  default: 14
+              zones:
+                fence-door:
+                  coordinates: 0,528,193,496,194,329,0,299
+                  objects:
+                    - person
+                    - dog
+                patio-area:
+                  coordinates: 915,720,822,514,622,381,398,368,205,354,194,498,0,551,0,604,0,720,129,720,459,720
+                  objects:
+                    - person
+                    - dog
+              objects:
+                filters:
+                  person:
+                    mask:
+                      - 0,0,0,296,418,368,960,367,960,0
+                  dog:
+                    mask:
+                      - 0,0,0,296,418,368,960,367,960,0
+                track:
+                  - person
+                  - dog
+              motion:
+                mask:
+                  - 0,0,0,296,418,368,960,367,960,0
+            # basement_door
+            "{{ .CAM3_NAME }}":
+              ffmpeg:
+                inputs:
+                  - path: "rtsp://127.0.0.1:8554/{{ .CAM3_NAME }}"
+                    input_args: preset-rtsp-restream
+                    roles:
+                      - detect
+                  - path: "rtsp://127.0.0.1:8554/{{ .CAM3_NAME }}"
+                    input_args: preset-rtsp-restream
+                    roles:
+                      - record
+              detect:
+                width: 1280
+                height: 720
+                fps: 10
+              record:
+                enabled: False
+              snapshots:
+                enabled: True
+                timestamp: False
+                retain:
+                  default: 14
+              objects:
+                filters:
+                  person:
+                    mask:
+                      - 0,0,0,354,248,199,857,209,884,0
+                track:
+                  - person
+              motion:
+                mask:
+                  - 0,0,0,354,248,199,857,209,884,0
+            # rear
+            "{{ .CAM4_NAME }}":
+              ffmpeg:
+                inputs:
+                  - path: "rtsp://127.0.0.1:8554/{{ .CAM4_NAME }}"
+                    input_args: preset-rtsp-restream
+                    roles:
+                      - detect
+                  - path: "rtsp://127.0.0.1:8554/{{ .CAM4_NAME }}"
+                    input_args: preset-rtsp-restream
+                    roles:
+                      - record
+              detect:
+                width: 1280
+                height: 720
+                fps: 10
+              record:
+                enabled: False
+              snapshots:
+                enabled: True
+                timestamp: False
+                retain:
+                  default: 14
+              zones:
+                vegetable-garden:
+                  coordinates: 701,240,1106,256,985,23,686,0
+                  objects:
+                    - person
+                    - dog
+                poop-corner:
+                  coordinates: 347,25,321,100,229,174,118,181,187,37
+                  objects:
+                    - person
+                    - dog
+                rear-garden:
+                  coordinates: 0,376,91,186,161,223,392,0,679,0,696,261,1088,264,1246,641,604,720,0,630
+                  objects:
+                    - person
+                    - dog
+              objects:
+                filters:
+                  person:
+                    mask:
+                      - 1280,595,1280,0,995,0
+                      - 0,0,215,0,213,30,158,30,0,313
+                      - 561,665,556,720,653,720,656,661
+                  dog:
+                    mask:
+                      - 1280,595,1280,0,995,0
+                      - 0,0,215,0,213,30,158,30,0,313
+                      - 561,665,556,720,653,720,656,661
+                track:
+                  - person
+                  - dog
+              motion:
+                mask:
+                  - 1280,595,1280,0,995,0
+                  - 0,0,215,0,213,30,158,30,0,313
+                  - 561,665,556,720,653,720,656,661
+            # kitchen
+            "{{ .CAM5_NAME }}":
+              ffmpeg:
+                inputs:
+                  - path: "rtsp://127.0.0.1:8554/{{ .CAM5_NAME }}"
+                    input_args: preset-rtsp-restream
+                    roles:
+                      - detect
+                  - path: "rtsp://127.0.0.1:8554/{{ .CAM5_NAME }}"
+                    input_args: preset-rtsp-restream
+                    roles:
+                      - record
+              detect:
+                width: 1024
+                height: 576
+                fps: 10
+              record:
+                enabled: False
+              snapshots:
+                enabled: True
+                timestamp: False
+                retain:
+                  default: 14
+            # upstairs
+            "{{ .CAM6_NAME }}":
+              ffmpeg:
+                inputs:
+                  - path: "rtsp://127.0.0.1:8554/{{ .CAM6_NAME }}"
+                    input_args: preset-rtsp-restream
+                    roles:
+                      - detect
+                  - path: "rtsp://127.0.0.1:8554/{{ .CAM6_NAME }}"
+                    input_args: preset-rtsp-restream
+                    roles:
+                      - record
+              detect:
+                width: 1024
+                height: 576
+                fps: 10
+              record:
+                enabled: False
+              snapshots:
+                enabled: True
+                timestamp: False
+                retain:
+                  default: 14
+              objects:
+                track:
+                  - person
+                  - dog
+            # driveway
+            "{{ .CAM7_NAME }}":
+              ffmpeg:
+                inputs:
+                  - path: "rtsp://127.0.0.1:8554/{{ .CAM7_NAME }}"
+                    input_args: preset-rtsp-restream
+                    roles:
+                      - detect
+                  - path: "rtsp://127.0.0.1:8554/{{ .CAM7_NAME }}"
+                    input_args: preset-rtsp-restream
+                    roles:
+                      - record
+              detect:
+                width: 1280
+                height: 720
+                fps: 10
+              record:
+                enabled: False
+              snapshots:
+                enabled: True
+                timestamp: False
+                retain:
+                  default: 14
+              zones:
+                bins:
+                  coordinates: 1077,208,1106,176,1149,149,1218,165,1280,328,1280,411,1231,450,1155,448
+                door:
+                  coordinates: 1280,628,1204,654,1180,480,1280,426
+                  objects:
+                    - person
+                    - dog
+                driveway-entry:
+                  coordinates: 37,219,0,554,0,230
+                  objects:
+                    - person
+                    - car
+                    - dog
+                driveway-main:
+                  coordinates: 514,148,1014,148,1147,656,893,720,498,720,21,604,44,217
+                  objects:
+                    - person
+                    - car
+                    - dog
+                side-garden:
+                  coordinates: 238,0,218,23,112,45,0,57,0,206,1117,141,1066,0,733,0
+                  objects:
+                    - person
+                    - dog
+              objects:
+                track:
+                  - person
+                  - dog
+                  - car
+            # basement
+            "{{ .CAM8_NAME }}":
+              ffmpeg:
+                inputs:
+                  - path: "rtsp://127.0.0.1:8554/{{ .CAM8_NAME }}"
+                    input_args: preset-rtsp-restream
+                    roles:
+                      - detect
+                  - path: "rtsp://127.0.0.1:8554/{{ .CAM8_NAME }}"
+                    input_args: preset-rtsp-restream
+                    roles:
+                      - record
+              detect:
+                width: 1024
+                height: 576
+                fps: 10
+              record:
+                enabled: False
+              snapshots:
+                enabled: True
+                timestamp: False
+                retain:
+                  default: 14
+              objects:
+                track:
+                  - person
   dataFrom:
     - extract:
         key: /home-automation/frigate
