--- a/kubernetes/apps/home-automation/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/frigate/app/helmrelease.yaml
@@ -78,8 +78,8 @@ spec:
     persistence:
       config-file:
         enabled: true
-        type: configMap
-        name: frigate-configmap
+        type: secret
+        name: frigate-config
         subPath: config.yml
         mountPath: /config/config.yml
         readOnly: true
