--- a/kubernetes/apps/home-automation/frigate/app/externalsecret.yaml
+++ b/kubernetes/apps/home-automation/frigate/app/externalsecret.yaml
@@ -70,28 +70,28 @@ spec:
             streams:
               # doorbell_front
               "{{ .CAM1_NAME }}":
-                - "rtspx:// {{ .DVR_URL }/ {{ .CAM1_ID }}"
+                - "rtspx://{{ .DVR_URL }}/{{ .CAM1_ID }}"
               # doorbell_patio
               "{{ .CAM2_NAME }}":
-                - "rtspx:// {{ .DVR_URL }/ {{ .CAM2_ID }}"
+                - "rtspx://{{ .DVR_URL }}/{{ .CAM2_ID }}"
               # basement_door
               "{{ .CAM3_NAME }}":
-                - "rtspx:// {{ .DVR_URL }/ {{ .CAM3_ID }}"
+                - "rtspx://{{ .DVR_URL }}/{{ .CAM3_ID }}"
               # rear
               "{{ .CAM4_NAME }}":
-                - "rtspx:// {{ .DVR_URL }/ {{ .CAM4_ID }}"
+                - "rtspx://{{ .DVR_URL }}/{{ .CAM4_ID }}"
               # kitchen
               "{{ .CAM5_NAME }}":
-                - "rtspx:// {{ .DVR_URL }/ {{ .CAM5_ID }}"
+                - "rtspx://{{ .DVR_URL }}/{{ .CAM5_ID }}"
               # upstairs
               "{{ .CAM6_NAME }}":
-                - "rtspx:// {{ .DVR_URL }/ {{ .CAM6_ID }}"
+                - "rtspx://{{ .DVR_URL }}/{{ .CAM6_ID }}"
               # driveway
               "{{ .CAM7_NAME }}":
-                - "rtspx:// {{ .DVR_URL }/ {{ .CAM7_ID }}"
+                - "rtspx://{{ .DVR_URL }}/{{ .CAM7_ID }}"
               # basement
               "{{ .CAM8_NAME }}":
-                - "rtspx:// {{ .DVR_URL }/ {{ .CAM8_ID }}"
+                - "rtspx://{{ .DVR_URL }}/{{ .CAM8_ID }}"
 
           cameras:
             # doorbell_front
