--- a/kubernetes/apps/home-automation/kustomization.yaml
+++ b/kubernetes/apps/home-automation/kustomization.yaml
@@ -9,4 +9,4 @@ resources:
   # Flux-Kustomizations
   - ./frigate/ks.yaml
   # - ./home-assistant/ks.yaml
-  # - ./zwave-js-ui/ks.yaml
+  - ./zwave-js-ui/ks.yaml
