--- a/kubernetes/apps/home-automation/zwave-js-ui/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/zwave-js-ui/app/helmrelease.yaml
@@ -70,12 +70,12 @@ spec:
         accessMode: ReadWriteOnce
         size: 1Gi
         storageClass: ceph-block
-    persistence:
-      usb:
-        enabled: true
-        type: hostPath
-        hostPath: /dev/serial/by-id/usb-0658_0200-if00
-        hostPathType: CharDevice
+    # persistence:
+    #   usb:
+    #     enabled: true
+    #     type: hostPath
+    #     hostPath: /dev/serial/by-id/usb-0658_0200-if00
+    #     hostPathType: CharDevice
     nodeSelector:
       feature.node.kubernetes.io/zwave: "true"
     resources:
