--- a/kubernetes/apps/home-automation/home-assistant/database/kustomization.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/database/kustomization.yaml
@@ -2,11 +2,7 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: home-automation
 resources:
-  # Pre Flux-Kustomizations
-  - ./namespace.yaml
   - ./externalsecret.yaml
-  # Flux-Kustomizations
-  - ./frigate/ks.yaml
-  - ./home-assistant/ks.yaml
-  - ./zwave-js-ui/ks.yaml
+  - ./cluster.yaml
