add example env vars

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,8 @@ FRIGATE_CAM1_ID="xxxxxxxx"
 # home-assistant
 HASS_POSTGRES_USER="xxxxxxxx"
 HASS_POSTGRES_PASSWORD="xxxxxxxx"
+HASS_POSTGRES_SUPER_USER="xxxxxxxx"
+HASS_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
 
 # immich
 IMMICH_POSTGRES_USER="immich"
