--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,14 @@ HASS_POSTGRES_USER="xxxxxxxx"
 HASS_POSTGRES_PASSWORD="xxxxxxxx"
 HASS_POSTGRES_SUPER_USER="xxxxxxxx"
 HASS_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
+HASS_ALARM_CODE="xxxxxxxx"
+HASS_DEPLOY_KEY_B64="xxxxxxxx"
+HASS_GIT_REPO="xxxxxxxx"
+HACS_TOKEN="xxxxxxxx"
+HASS_LDAP_ROOT="dc=some,dc=example,dc=com"
+HASS_LOCAL_DOMAIN="example.com"
+HASS_LOCATION_LAT="00.0000000"
+HASS_LOCATION_LONG="-00.0000000"
 
 # immich
 IMMICH_POSTGRES_USER="immich"
