--- a/kubernetes/apps/home-automation/home-assistant/app/externalsecret.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/externalsecret.yaml
@@ -15,11 +15,11 @@ spec:
       engineVersion: v2
       data:
         # App
-        alarm_code: "{{ .ALARM_CODE }}"
-        hacs_token: "{{ .HACS_TOKEN }}"
-        location_lat: "{{ .LOCATION_LAT }}"
-        location_long: "{{ .LOCATION_LONG }}"
-        db_url: "postgresql://{{ .POSTGRES_USER }}:{{ .POSTGRES_PASSWORD }}@postgres-rw.database.svc.cluster.local/home_assistant"
+        alarm_code: "{{ .HASS_ALARM_CODE }}"
+        hacs_token: "{{ .HASS_HACS_TOKEN }}"
+        location_lat: "{{ .HASS_LOCATION_LAT }}"
+        location_long: "{{ .HASS_LOCATION_LONG }}"
+        db_url: "postgresql://{{ .HASS_POSTGRES_USER }}:{{ .HASS_POSTGRES_PASSWORD }}@home-assistant-rw.home-automation.svc.cluster.local/home_assistant"
   dataFrom:
     - extract:
         key: /home-automation/home-assistant
