--- a/kubernetes/apps/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/helmrelease.yaml
@@ -38,7 +38,9 @@ spec:
       tag: 2023.7.2@sha256:d6627e982c70dc963b4e15f223f56efb33d4b353c6ad9927b6f5be0c45f94a3b
     env:
       TZ: America/New_York
-    envFrom: *envFrom
+    envFrom:
+      - secretRef:
+          name: home-assistant-secret
     service:
       main:
         ports:
