--- a/kubernetes/apps/home-automation/home-assistant/app/httproute.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/httproute.yaml
@@ -17,3 +17,22 @@ spec:
         - name: home-assistant
           port: 8123
           weight: 1
+---
+apiVersion: gateway.networking.k8s.io/v1beta1
+kind: HTTPRoute
+metadata:
+  name: home-assistant-code
+  namespace: home-automation
+spec:
+  parentRefs:
+    - name: cilium-ingressgateway
+      namespace: ingress
+  hostnames: ["hass-code.${DOMAIN}"]
+  rules:
+    - matches:
+        - path:
+            value: /
+      backendRefs:
+        - name: home-assistant-codeserver
+          port: 12321
+          weight: 1
