--- a/kubernetes/apps/home-automation/frigate/app/externalsecret.yaml
+++ b/kubernetes/apps/home-automation/frigate/app/externalsecret.yaml
@@ -23,6 +23,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: frigate-config
+  namespace: home-automation
 spec:
   refreshInterval: "30m"
   secretStoreRef:
