--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -32,8 +32,15 @@ spec:
       GF_EXPLORE_ENABLED: true
       GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: natel-discrete-panel,pr0ps-trackmap-panel,panodata-map-panel
       GF_SERVER_ROOT_URL: "https://grafana.${DOMAIN}"
-    envFromSecrets:
-      - name: *secret
+      GF_PANELS_DISABLE_SANITIZE_HTML: true
+      GF_LOG_FILTERS: rendering:debug
+      GF_DATE_FORMATS_FULL_DATE: "MMM Do, YYYY hh:mm:ss a"
+      GF_DATE_FORMATS_INTERVAL_SECOND: "hh:mm:ss a"
+      GF_DATE_FORMATS_INTERVAL_MINUTE: "hh:mm a"
+      GF_DATE_FORMATS_INTERVAL_HOUR: "DD/MM hh:mm a"
+      GF_DATE_FORMATS_INTERVAL_DAY: "DD/MM"
+      GF_DATE_FORMATS_INTERVAL_MONTH: "MM-YYYY"
+      GF_DATE_FORMATS_INTERVAL_YEAR: "YYYY"
     grafana.ini:
       analytics:
         check_for_updates: false
@@ -43,10 +50,21 @@ spec:
         enabled: false
       auth.anonymous:
         enabled: false
-        # org_id: 1
-        # org_role: Viewer
+      auth.ldap:
+        enabled: true
+        allow_sign_up: true
+        config_file: /secrets/ldap.toml
       news:
         news_feed_enabled: false
+    extraVolumeMounts:
+      - name: grafana-config
+        mountPath: /secrets
+        subPath: ldap.toml
+        readOnly: true
+    extraVolumes:
+      - name: grafana-config
+        secret:
+          secretName: grafana-config
     dashboardProviders:
       dashboardproviders.yaml:
         apiVersion: 1
@@ -137,11 +155,16 @@ spec:
           gnetId: 11312
           revision: 9
           datasource: Prometheus
+        # Ref: https://grafana.com/grafana/dashboards/12904-hashicorp-vault/
+        vault:
+          gnetId: 12904
+          revision: 2
+          datasource: Prometheus
         # Ref: https://grafana.com/grafana/dashboards/7845-zfs/
         zfs:
           gnetId: 7845
           revision: 4
-          datasource: Prometheus
+          datasource: Prometheus        
         cloudnative-pg:
           url: https://raw.githubusercontent.com/cloudnative-pg/cloudnative-pg/main/docs/src/samples/monitoring/grafana-dashboard.json
           datasource: Prometheus
