--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -243,6 +243,8 @@ tasks:
           PLUS_API_KEY="{{.FRIGATE_PLUS_API_KEY}}"
       # monitoring/grafana
       - vault kv put -mount=kv/ monitoring/grafana
+          ADMIN_USER="{{.GRAFANA_ADMIN_USER}}"
+          ADMIN_PASSWORD="{{.GRAFANA_ADMIN_PASSWORD}}"
           LDAP_SERVER="{{.GRAFANA_LDAP_SERVER}}"
           LDAP_USERNAME="{{.GRAFANA_LDAP_SERVER}}"
           LDAP_PASSWORD="{{.GRAFANA_LDAP_SERVER}}"
