--- a/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
@@ -2,7 +2,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: grafana-config
+  name: grafana
   namespace: monitoring
 spec:
   refreshInterval: "30m"
@@ -10,11 +10,13 @@ spec:
     name: vault-kv-backend
     kind: SecretStore
   target:
-    name: grafana-config
+    name: grafana
     template:
       type: opaque
       data:
-        ldap.toml: |
+        admin-user: "{{ .ADMIN_USER }}"
+        admin-password: "{{ .ADMIN_PASSWORD }}"
+        ldap-toml: |
           verbose_logging = true
           [[servers]]
           host = "{{ .LDAP_SERVER }}"
