update example env

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,15 @@ FRIGATE_DVR_URL="192.168.0.1:7441"
 FRIGATE_CAM1_NAME="some_camera"
 FRIGATE_CAM1_ID="xxxxxxxx"
 
+# grafana
+GRAFANA_ADMIN_USER="xxxxxxxx"
+GRAFANA_ADMIN_PASSWORD="xxxxxxxx"
+GRAFANA_LDAP_SERVER="ldap.example.com"
+GRAFANA_LDAP_USERNAME="xxxxxxxx"
+GRAFANA_LDAP_PASSWORD="xxxxxxxx"
+GRAFANA_LDAP_ROOT="dc=ldap,dc=example,dc=com"
+
+
 # home-assistant
 HASS_POSTGRES_USER="xxxxxxxx"
 HASS_POSTGRES_PASSWORD="xxxxxxxx"
