--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -55,12 +55,12 @@ spec:
       auth.ldap:
         enabled: true
         allow_sign_up: true
-        config_file: /etc/grafana/ldap.toml
+        config_file: /secrets/ldap.toml
       news:
         news_feed_enabled: false
     extraVolumeMounts:
       - name: ldap-config
-        mountPath: /etc/grafana/ldap.toml
+        mountPath: /secrets/ldap.toml
         subPath: ldap.toml
         readOnly: true
     extraVolumes:
